<resources><!-- Copyright (c) 2013-2017 YA <ya.androidapp@gmail.com> All rights reserved. --><!-- This software includes the work that is distributed in the Apache License 2.0 -->
    <!-- TlActivity -->
    <string name="app_name">Yumura</string>
    <string name="app_name_viewer">Yumura viewer</string>
    <string name="action_cancel">キャンセル</string>
    <string name="action_change_consumer_key">コンシューマーキーの変更</string>
    <string name="action_debug">デバッグ</string>
    <string name="action_delJustBefore">直前のツイートを削除</string>
    <string name="action_delJustBefore_del">削除</string>
    <string name="action_enter_url">URL入力（自動補完）</string>
    <string name="action_load_lower">タイムライン読み込み(下)</string>
    <string name="action_load_upper">タイムライン読み込み(上)</string>
    <string name="action_makeShortcut">ショートカットを作成</string>
    <string name="action_move_to_bottom">最下部へ移動</string>
    <string name="action_move_to_top">最上部へ移動</string>
    <string name="action_move_to_unread">未読へ移動</string>
    <string name="action_ok">OK</string>
    <string name="action_search">検索</string>
    <string name="action_settings">Settings</string>
    <string name="action_tl_search">ページ内検索</string>
    <string name="action_tl_search_createat">投稿日時</string>
    <string name="action_tl_search_screenname">ユーザ名</string>
    <string name="action_tl_search_source">クライアント名</string>
    <string name="action_tl_search_text">本文</string>
    <string name="action_update">投稿</string>
    <string name="action_update_text">本文</string>
    <string name="bird_gray">Twitter社のAPIによって取得した情報を表示しています</string>
    <string name="message_change_consumer_key">dev.twitter.comで取得したConsumer keyとConsumer secretをスペース区切りで入力してください</string>
    <string name="message_change_consumer_key_yes">変更してサインインへ進む</string>
    <string name="message_change_consumer_key_no">変更しない</string>
    <string name="message_communication_volume_of_this_app">通信量: </string>
    <string name="message_on_connect">インターネットに接続されています</string>
    <string name="message_on_disconnect">インターネットから切断されています</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_oauth">OAuth Sign-in</string>
    <string name="title_activity_tlactivity">タイムライン</string>
    <string name="title_activity_vieweractivity">ビューワ</string>
    <string name="title_tl_mute">本文ミュート</string>
    <string name="title_icon_mute">アイコンミュート</string>

    <!-- TweetMenu -->
    <string name="tweet_reply">返信</string>
    <string name="tweet_retweet">公式RT</string>
    <string name="tweet_userretweet">非公式RT</string>
    <string name="tweet_create_favorite">ふぁぼ</string>
    <string name="tweet_destroy_favorite">ふぁぼ解除</string>
    <string name="tweet_favoriteretweet">ふぁぼ＋公式RT</string>
    <string name="tweet_favoriteuserretweet">ふぁぼ＋非公式RT</string>
    <string name="tweet_share_url">URLを共有</string>
    <string name="tweet_share_url_tweet">ツイートのURLを共有</string>
    <string name="tweet_share_text">本文を共有</string>
    <string name="tweet_delete">削除</string>
    <string name="tweet_pak">パクツイ</string>

    <!-- ViewerActivity -->
    <string name="search_menu_search">URL</string>
    <string name="search_menu_search_hint">URL</string>

    <!-- Preferences -->
    <string name="pref_tl_api_count">The number of tweets to try and retrieve</string>
    <string name="pref_tl_api_count_value">200</string>

    <string name="pref_icon_mute">アイコンミュート</string>
    <string name="pref_icon_mute_screenname">ユーザ名</string>
    <string name="pref_icon_mute_screenname_summary">カンマ区切り</string>

    <string name="pref_tl_fontcolor_favorite">ふぁぼフォント色</string>
    <string name="pref_tl_fontcolor_favorite_value">#ffe45f</string>
    <string name="pref_tl_fontcolor_retweet">RTフォント色</string>
    <string name="pref_tl_fontcolor_retweet_value">#56bf0c</string>

    <string name="pref_tl_img_show">インライン画像を表示する</string>
    <string name="pref_tl_img_zoom">インライン画像表示倍率</string>
    <string name="pref_tl_img_zoom_value">1</string>

    <string name="pref_tl_move_to_unread_mute_source">未読管理で無視するクライアント名</string>
    <string name="pref_tl_move_to_unread_mute_source_summary">>未読管理で無視するクライアント名をカンマ区切りで指定します</string>

    <string name="pref_tl_mute">本文ミュート</string>
    <string name="pref_tl_mute_screenname">ユーザ名</string>
    <string name="pref_tl_mute_screenname_summary">カンマ区切り</string>
    <string name="pref_tl_mute_text">本文</string>
    <string name="pref_tl_mute_text_summary">カンマ区切り</string>

    <string name="pref_tl_reverse_direction">Read Direction</string>
    <string name="pref_tl_reverse_direction_message">Reverse the read direction of timelines (true: From bottom to top)</string>

    <string name="pref_vieweractivity_use_urlstring">投稿時に現在のページのURLではなくIntentで受け取ったURLを使う</string>
    <string name="pref_webview_clear_histories_enabled">終了時に履歴やCookie、キャッシュを削除する</string>
    <string name="pref_webview_js_enabled">Javascriptを有効にする</string>
    <string name="pref_webview_urlcheck_enabled">URLチェックを有効にする</string>
    <string name="pref_webview_urlcheck_enabled_message">HTTP／HTTPSプロトコルのみ許可します</string>
    <string name="pref_webview_custom_useragent">User Agent</string>
    <string name="useragent_gecko">Mozilla/5.0 (Android; Mobile; rv:48.0) Gecko/48.0 Firefox/48.0</string>


    <string name="pref_debug_write_logcat">デバッグログを出力する</string>

    <string name="pref_tl_theme_list">Theme</string>
    <string-array name="pref_tl_theme_list_titles">
        <item>Dark</item>
        <item>Light</item>
        <item>Comply with the Twitter Web</item>
    </string-array>
    <string-array name="pref_tl_theme_list_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>
</resources>
